# server-rust-gstreamer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/utils/: ingestor.rs
